# oxiDice

./: .gitignore  Cargo.toml  README.md  main
src/: config.rs  entropy.rs  lib.rs  main.rs  pass_code.rs  pass_phrase.rs
