[package]
name = "oxiDice"
version = "1.0.0"
edition = "2021"
authors = ["Pratham Patel"]
description = "Simple CLI to generate customizable passwords as either alphanumeric codes or diceware-based phrases."
readme = "README.md"
license = "MIT"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autoclap = "0.3.15"
clap = { version = "4.4.7", features = ["cargo", "string", "derive"] }
ilog = "1.0.1"
rand = "0.8.5"
